--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "react-snap",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -44,10 +43,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "react-snap": "^1.23.0"
-  },
-  "reactSnap": {
-    "inlineCss": true
+    "gh-pages": "^6.1.1"
   }
 }
