--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -44,5 +46,8 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
+  },
+  "reactSnap": {
+    "inlineCss": true
   }
 }
